<resources>
    <string name="app_name">BucovinApp</string>
    <string name="obiective_turistice_drawer_menu">Obiective Turistice</string>
    <string name="cazare_drawer_menu">Cazare</string>
    <string name="restaurante_drawer_menu">Restaurante</string>
    <string name="cazare_text_drawer_menu">Cazare</string>
    <string name="obiective_turistice_text_drawer_menu">Obiective Turistice</string>
    <string name="restaurante_text_drawer_menu">Restaurante</string>
    <string name="adauga_recenzie_text_toolbar">Adauga Recenzie</string>
    <string name="adaugati_o_recenzie_hint_edit_text">Adaugati o recenzie&#8230;</string>
    <string name="trimite_recenzie_text_buton">Trimite Recenzie</string>
    <string name="anulare_trimitere_recenzie_text_buton">Anulare</string>
    <string name="nume_text_rezervare">Nume</string>
    <string name="nume_hint_rezervare">Nume</string>
    <string name="prenume_text_rezervare">Prenume</string>
    <string name="prenume_hint_rezervare">Prenume</string>
    <string name="check_in_text_rezervare">Check-in</string>
    <string name="check_out_text_rezervare">Check-out</string>
    <string name="familie_cu_copil_text_check_box_rezervare">Familie cu copil</string>
    <string name="rezervare_text_toolbar">Rezerva camera</string>
    <string name="text_buton_login_activity">LOG IN</string>
    <string name="app_title_start_activity">BUCOVINAPP</string>
    <string name="trimite_rezervare_text_buton">Trimite rezervare</string>
    <string name="anulare_rezervare_text_buton">Anulare rezervare</string>
    <string name="welcome_text_start_activity">Bine ati venit!</string>
    <string name="utilizator_drawer_menu">Utilizator</string>
    <string name="username_start_activity">Username</string>
    <string name="password_start_activity">Password</string>
    <string name="keep_me_as_logged_in">Keep me as logged in</string>
    <string name="log_out_button">Log Out</string>
    <string name="recenzii_pozitive">Recenzii pozitive</string>
    <string name="recenzii_raport_buton">Recenziile dumneavoastra</string>
    <string name="registerButonID">Register</string>
    <string name="username_register">Username:</string>
    <string name="email_register">Email:</string>
    <string name="nume_text_register">Nume:</string>
    <string name="prenume_text_register">Prenume:</string>
    <string name="username_text_register">Username:</string>
    <string name="parola_text_register">Parola:</string>
    <string name="email_text_register">Email:</string>
    <string name="register_button">Register</string>
    <string name="confirm_password_text_register">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="parola_veche">Parola veche</string>
    <string name="parola_noua">Parola noua</string>
    <string name="salveaza_modificari">Salveaza modificari</string>
    <string name="anulare_schimbare_parola">Anulare</string>
    <string name="recenzie_modificare_text">Recenzie :</string>
    <string name="salveaza_rapoarte">Salveaza Rapoarte</string>
    <string name="rezervarile_mele_text_buton">Rezervarile mele</string>
    <string name="statistici_recenzii">Statistici Recenzii</string>

    <array name="tipuri_cazare">
        <item>Toate</item>
        <item>Hotel</item>
        <item>Pensiune</item>
    </array>
    <string name="title_activity_localizare">Map</string>
    <string name="harta">Harta</string>
</resources>
