<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RezervareCazare">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/rezervare_text_toolbar"
        android:id="@+id/rezervareToolbarID"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/White"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detaliiRezervareTV"
                android:textColor="@color/Black">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nume_text_rezervare"
                    android:id="@+id/numeRezervareTV"
                    android:textColor="@color/Black">
                </TextView>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/nume_hint_rezervare"
                    android:id="@+id/numeRezervareET">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prenume_text_rezervare"
                    android:id="@+id/prenumeRezervareTV"
                    android:textColor="@color/Black">
                </TextView>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/prenume_hint_rezervare"
                    android:id="@+id/prenumeRezervareET">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_in_text_rezervare"
                    android:id="@+id/checkInRezervareTV"
                    android:textColor="@color/Black">
                </TextView>

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:id="@+id/checkInDataID">
                </DatePicker>

                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:id="@+id/checkInOraID">
                </TimePicker>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_out_text_rezervare"
                    android:id="@+id/checkOutRezervareTV"
                    android:textColor="@color/Black">
                </TextView>

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:id="@+id/checkOutDataID">
                </DatePicker>

                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:id="@+id/checkOutOraID">
                </TimePicker>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/familieCopilCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/familie_cu_copil_text_check_box_rezervare">
                </CheckBox>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trimite_rezervare_text_buton"
                android:id="@+id/trimiteRezervareButonID"
                android:onClick="metodaTrimiteRezervare">
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anulare_rezervare_text_buton"
                android:id="@+id/anulareRezervareButonID"
                android:onClick="metodaAnulareRezervare">
            </Button>

        </LinearLayout>

    </ScrollView>

</LinearLayout>